PoC for mask approach
Signed-off-by: John Mazanec <jmazane@amazon.com>